implement new/show friend

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 {{partial 'partials/header'}}
 
 <div class="container">
-    <h2 id="title">Welcome to Ember.js</h2>
+    <h4 id="title">+- Welcome to Ember.js</h4>
 
     {{outlet}}
 </div>
