--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -1,5 +1,9 @@
 <h3>Friend profile</h3>
 
+<p>
+{{link-to 'Back to friends' 'friends' class='btn waves-effect waves-light'}}
+</p>
+
 <ul class="collection">
     <li class="collection-item">First name: {{model.firstName}}</li>
     <li class="collection-item">Last name: {{model.lastName}}</li>
