implement edit friend profile

--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -1,7 +1,8 @@
 <h3>Friend profile</h3>
 
 <p>
-{{link-to 'Back to friends' 'friends' class='btn waves-effect waves-light'}}
+{{link-to 'Back to friends' 'friends' class='btn waves-effect waves-light pink'}}
+{{link-to 'Edit profile' 'friends.edit' model class='btn waves-effect waves-light green'}}
 </p>
 
 <ul class="collection">
