--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -1,3 +1,5 @@
+{{link-to 'New friend' 'friends.new' class='btn waves-effect waves-light blue'}}
+
 <h5>Total friends: {{model.length}}</h5>
 
 {{#md-collection content=model header='All Friends' as |friend|}}
