--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 {{partial 'partials/header'}}
 
 <div class="container">
-    <h4 id="title">+- Welcome to Ember.js</h4>
+    <h6 id="title" class="purple-text">+- Welcome to Ember.js</h6>
 
     {{outlet}}
 </div>
