add article resource

--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -11,3 +11,7 @@
     <li class="collection-item">Email: {{model.email}}</li>
     <li class="collection-item">Twitter: {{model.twitter}}</li>
 </ul>
+
+<div class="articles">
+{{outlet}}
+</div>
