--- a/app/templates/friends/index.hbs
+++ b/app/templates/friends/index.hbs
@@ -9,7 +9,7 @@
 {{/md-collection}}
 
 {{#md-collection content=model as |friend|}}
-    {{#link-to 'friends.show' friend class='collection-item'}}
+    {{#link-to 'articles' friend class='collection-item'}}
     <i class="mdi-action-favorite blue-text text-lighten-2"></i>
     {{friend.id}} - {{friend.fullName}}
     {{/link-to}}
