implement new articles

--- a/app/templates/friends/show.hbs
+++ b/app/templates/friends/show.hbs
@@ -13,5 +13,7 @@
 </ul>
 
 <div class="articles">
+{{link-to 'Lend articles' 'articles.new' model class='btn waves-effect waves-light green'}}
+
 {{outlet}}
 </div>
