--- a/app/templates/articles/index.hbs
+++ b/app/templates/articles/index.hbs
@@ -5,3 +5,20 @@
     {{article.createdAt}} - {{article.description}}
   </div>
 {{/md-collection}}
+
+<table class="hoverable">
+    <thead>
+        <tr>
+            <th>Description</th>
+            <th>Notes</th>
+            <th>Borrowed since</th>
+            <th>xx</th>
+            <th>zz</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each model as |article|}}
+            {{articles/article-row article=article save='save' articleStates=possibleStates}}
+        {{/each}}
+    </tbody>
+</table>
