--- a/app/templates/friends/-form.hbs
+++ b/app/templates/friends/-form.hbs
@@ -1,10 +1,10 @@
 <form {{action "save" on="submit"}}>
     <h6 class="red-text">{{errorMessage}}</h6>
 
-    {{md-input value=model.firstName label="First name"}}
-    {{md-input value=model.lastName label="Last name"}}
-    {{md-input value=model.email label="Email" type="email"}}
-    {{md-input value=model.twitter label="Twitter"}}
+    {{md-input value=model.firstName label="First name" class="first-name"}}
+    {{md-input value=model.lastName label="Last name" class="last-name"}}
+    {{md-input value=model.email label="Email" type="email" class="email"}}
+    {{md-input value=model.twitter label="Twitter" class="twitter"}}
 
     {{md-btn-submit icon='mdi-content-send' iconPosition='right' text='Submit'}}
     {{md-btn text='Cancel' action='cancel' class='grey'}}
